[package]
name = "s3dl"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-util = "0.3.14"
num_cpus = "1"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
structopt = "0.3.21"
tokio = { version = "1", features = ["fs", "io-std"] }

[profile.release]
codegen-units = 1
lto = true